force-app/main/default/objects/Behavior_Log_Summary__c/Behavior_Log_Summary__c.object-meta.xml
<CustomObject>
    <description>Daily aggregate counters for user behavior events. Replaces row-per-event scanning with lightweight summary records grouped by User, Object, Action, and Date.</description>
    <label>Behavior Log Summary</label>
    <nameField>
        <displayFormat>BLS-{0000000}</displayFormat>
        <label>Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Log Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>