force-app/main/default/objects/Behavior_Log_Summary__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <description>The DML action type aggregated in this summary (e.g., Record_Created, Record_Updated).</description>
    <label>Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>