force-app/main/default/objects/Behavior_Log_Summary__c/fields/Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Composite_Key__c</fullName>
    <description>Upsert key for daily aggregation: UserId_ObjectApiName_ActionName_YYYY-MM-DD. Used as the external ID for Database.upsert operations.</description>
    <externalId>true</externalId>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>