force-app/main/default/objects/Behavior_Log_Summary__c/fields/Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Event_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of events for this User, Object, Action, and Date combination.</description>
    <label>Event Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>