force-app/main/default/objects/Behavior_Log_Summary__c/fields/Last_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Time__c</fullName>
    <description>Timestamp of the most recent event in this daily aggregate.</description>
    <label>Last Event Time</label>
    <type>DateTime</type>
</CustomField>