force-app/main/default/objects/Behavior_Log_Summary__c/fields/Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Date__c</fullName>
    <description>The date on which the aggregated events occurred.</description>
    <label>Log Date</label>
    <type>Date</type>
</CustomField>