force-app/main/default/objects/Behavior_Log_Summary__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The SObject API name for the aggregated events (e.g., Case, Opportunity, Lead).</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>