force-app/main/default/objects/Behavior_Log_Summary__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user whose behavior events are aggregated in this summary.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Behavior_Log_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>