force-app/main/default/objects/Behavior_Log_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Action_Name__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Event_Count__c</columns>
    <columns>Log_Date__c</columns>
    <columns>Last_Event_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>